fix for menu not showing

--- a/shared.css
+++ b/shared.css
@@ -11,7 +11,7 @@ html, body {
 
 body {
   display: grid;
-  grid-template-rows: 5rem auto 5rem;
+  grid-template-rows: 5.5rem auto 5.5rem;
   grid-template-areas: "header" "main" "footer";
   max-width: 600px;
   margin: auto;
